--- a/app/src/main/res/layout/activity_compartment1.xml
+++ b/app/src/main/res/layout/activity_compartment1.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -8,20 +8,26 @@
     android:orientation="vertical"
     tools:context=".Compartment1">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
     <android.support.v7.widget.GridLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         app:columnCount="3"
-        app:rowCount="3"
+        app:rowCount="8"
         android:padding="30dp">
 
 
         <Button
-            android:id="@+id/button3"
+            android:id="@+id/button1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="1"
+            android:clickable="true"
+            android:focusable="true"
             app:layout_column="0"
             app:layout_row="0" />
 
@@ -34,7 +40,7 @@
             app:layout_row="0" />
 
         <Button
-            android:id="@+id/button4"
+            android:id="@+id/button3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="3"
@@ -42,7 +48,7 @@
             app:layout_row="0" />
 
         <Button
-            android:id="@+id/button5"
+            android:id="@+id/button4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="4"
@@ -50,7 +56,7 @@
             app:layout_row="1" />
 
         <Button
-            android:id="@+id/button6"
+            android:id="@+id/button5"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="5"
@@ -58,7 +64,7 @@
             app:layout_row="1" />
 
         <Button
-            android:id="@+id/button7"
+            android:id="@+id/button6"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="6"
@@ -66,7 +72,7 @@
             app:layout_row="1" />
 
         <Button
-            android:id="@+id/button8"
+            android:id="@+id/button7"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="7"
@@ -74,20 +80,47 @@
             app:layout_row="2" />
 
         <Button
-            android:id="@+id/button9"
+            android:id="@+id/button8"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="8"
             app:layout_column="1"
             app:layout_row="2" />
 
+        <Button
+            android:id="@+id/button9"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="9"
+            app:layout_row="2"
+            app:layout_column="2" />
 
+        <Button
+            android:id="@+id/button10"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="10"
+            app:layout_row="3"
+            app:layout_column="0" />
 
+        <Button
+            android:id="@+id/button11"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="11"
+            app:layout_row="3"
+            app:layout_column="1" />
+
+        <Button
+            android:id="@+id/button12"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="12"
+            app:layout_row="3"
+            app:layout_column="2" />
     </android.support.v7.widget.GridLayout>
 
-    <Button
-        android:id="@+id/button10"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="save" />
-</LinearLayout>
+
+
+    </LinearLayout>
+</ScrollView>
